--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -34,7 +34,7 @@ jobs:
     - name: test
       run: make test
     - name: test mem
-      run: scripts/test.sh mem
+      run: test/test.sh mem
   ubuntu_18:
     name: Ubuntu 18
     runs-on: ubuntu-18.04
